# langchain-youtube

./: commands  pyproject.toml
2.setup/: 2setup.ipynb
2.setup/.ipynb_checkpoints/: 2setup-checkpoint.ipynb
3. Langchain_messages/: Langhain Messages.ipynb
3. Langchain_messages/.ipynb_checkpoints/: Langhain Messages-checkpoint.ipynb
4. Runnable explained/: runnable_explained.ipynb
4. Runnable explained/.ipynb_checkpoints/: runnable_explained-checkpoint.ipynb
5.chains/: chains.ipynb
5.chains/.ipynb_checkpoints/: chains-checkpoint.ipynb
6.prompts/: prompts.ipynb  template.txt
6.prompts/.ipynb_checkpoints/: prompts-checkpoint.ipynb
