[project]
name = "langchain-course-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad Gill",email = "talktoahmadgill@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "notebook (>=7.4.5,<8.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langchain-community (>=0.3.28,<0.4.0)",
    "langchain-text-splitters (>=0.3.9,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
